// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a mask div before the kebab if it is loading 1`] = `
<li>
  <div
    style={
      Object {
        "backgroundImage": null,
      }
    }
  />
  <div>
    Unit Test Product
  </div>
  <ProductOptions
    options={Array []}
  />
  <div>
    <div>
      <span>
        1
      </span>
      <span>
        ×
      </span>
      <span>
        <mockConstructor
          currencyCode="US"
          value={99}
        />
      </span>
    </div>
  </div>
  <div />
  <Kebab>
    <Section
      icon="Heart"
      iconAttributes={Object {}}
      onClick={[Function]}
      text="Add to favorites"
    />
    <Section
      icon="Edit2"
      onClick={[Function]}
      text="Edit item"
    />
    <Section
      icon="Trash"
      onClick={[Function]}
      text="Remove item"
    />
  </Kebab>
</li>
`;

exports[`it renders correctly 1`] = `
<li>
  <div
    style={
      Object {
        "backgroundImage": null,
      }
    }
  />
  <div>
    Unit Test Product
  </div>
  <ProductOptions
    options={Array []}
  />
  <div>
    <div>
      <span>
        1
      </span>
      <span>
        ×
      </span>
      <span>
        <mockConstructor
          currencyCode="US"
          value={99}
        />
      </span>
    </div>
  </div>
  <Kebab>
    <Section
      icon="Heart"
      iconAttributes={Object {}}
      onClick={[Function]}
      text="Add to favorites"
    />
    <Section
      icon="Edit2"
      onClick={[Function]}
      text="Edit item"
    />
    <Section
      icon="Trash"
      onClick={[Function]}
      text="Remove item"
    />
  </Kebab>
</li>
`;
